# dio-blog

./: README.md  pyproject.toml  render-deploy.sh
migrations/versions/: 62258cd0b91c_inicial_migrate.py
src/: app.py  config.py  db.py  schema.sql  utils.py
src/controllers/: auth.py  role.py  user.py
src/models/: post.py  role.py  user.py
src/views/: role.py  user.py
tests/integration/: conftest.py
tests/integration/controllers/: test_user.py
tests/unit/: test_utils.py
